# cookiecutter-template

./: .gitignore  Anteproyecto TFG Despliegue de Kubernetes con Ansible en entornos offline .docx  Anteproyecto TFG.docx  Anteproyecto de Sergio Picazo.md  GANTT-WPD.pptx  Gantt.xlsx  README.md  Reporte-LoadTestQueries-Frontend.html  TFG Despliegue de Kubernetes con Ansible en entornos offline .docx  indiceTFG.docx
ansible-playbooks/: README.md  ansible.cfg  hosts.ini  inventario  locustfile.py  requirements.yml  site.yml  sites.yaml
ansible-playbooks/group_vars/all/: rke2_agents.yml  rke2_servers.yml  vars.yaml  vault.yaml
ansible-playbooks/kubernetes-installation/: README.md  ansible.cfg  hosts.ini  inventario  sites.yaml
ansible-playbooks/kubernetes-installation/group_vars/all/: rke2_servers.yml  (+3 more)
ansible-playbooks/kubernetes-installation/sample_files/: registries.yaml
ansible-playbooks/sample_files/: audit-policy.yaml  registries.yaml
ansible-playbooks/sample_files/manifest/: manifest.yaml  manifest2.yaml  wikijs-config.yaml  wikijs-deployment.yaml  wikijs-secret.yaml  wikijs-service.yaml
k8s_ansible_offline/: AUTHORS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
k8s_ansible_offline/docs/: index.md
k8s_ansible_offline/k8s_ansible_offline/: __init__.py
k8s_ansible_offline/tests/: test_k8s_ansible_offline.py
rke2-ansible-main/: ansible.cfg  localhost.csr  localhost.key  localhost_new.csr
rke2-ansible-main/inventory/my-cluster/: hosts.ini
rke2-ansible-main/inventory/sample/: hosts.ini
scripts/: instalar-ansible.sh  setup-host.sh
(+154 files in other folders)
